syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.fildv.grpcmeteo";
option java_outer_classname = "GeneratorProto";
option objc_class_prefix = "RTG";

package service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message GIndicator {
  int64 id = 1;
  int64 meteo_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  double value = 4;
  GMeteoType meteo_type = 5;
}

enum GMeteoType {
  TEMPERATURE = 0;
  HUMIDITY = 1;
  PRESSURE = 2;
}

message GAnalyticsRequest {
  int64 batch_size = 1;
}

service MeteoServer{
  rpc AddIndicator(GIndicator) returns (google.protobuf.Empty);
  rpc AddStreamOfIndicator(stream GIndicator) returns (google.protobuf.Empty);
}

service AnalyticsServer {
  rpc GetIndicators(GAnalyticsRequest) returns (stream GIndicator);
}
